Refactor and enhance user activation features
- Removed unnecessary line from application-playwright.properties.
- Updated AuditControllerTest to include mocks for ExternalUserPollingService and EntraUserRepository.
- Added UserActivationControllerTest with comprehensive tests for user reactivation flows, including GET and POST methods for delegate reactivation and reasons.
- Modified UserControllerTest to adjust enablement flags and updated assertions for delete reasons.
- Refactored AccessControlServiceTest to improve permission checks and added new tests for delegation.
- Introduced UserReactivationActivationRequestServiceTest to cover request creation and state management.
- Enhanced UserServiceTest to ensure no notifications are sent when an existing user is invited.